# shovelmates-minnehack-2023

./: README.md  api-spec.md
frontend/: TODO.md  package-lock.json  package.json
frontend/app/: App.svelte
frontend/app/lib/: BetterListPicker.svelte  Navbar.svelte  api.ts
frontend/app/pages/: LoginSignup.svelte  Senior.svelte  Splash.svelte  Volunteer.svelte
self-signed-bs/: cert.pem  certificate.p12  certificate.pem  key.pem
server/: .gitignore  Cargo.toml
server/src/: accounts.rs  authorization.rs  chat_connection.rs  db.rs  errors.rs  help_requests.rs  main.rs  rejections.rs  volunteering.rs
unit-testing/: README.md  package-lock.json  package.json  serverTest.mjs
