[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1.24", features = ["rt", "macros", "rt-multi-thread", "sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sled = "0.34"
rand = "0.8"
sha3 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1.17"
thiserror = "1.0"
anyhow = "1.0"
pretty_env_logger = "0.4"
log = "0.4"
secrecy = { version = "0.8", features = ["serde"] }
